# puls-event-rag

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml  rapport_technique.md
api/: main.py
data/processed/: events_clean.csv
docs/: evaluation_results.json  evaluation_resultsRagas.csv  evaluation_resultsRagas.json  qa_dataset.json  rapport_technique.md
rag/: chain.py  retriever.py
scripts/: build_index.py  check_index.py  collect_data.py  evaluate_rag.py  evaluate_ragas.py
tests/: test_api.py  test_data.py  test_index.py
